track layout issues.

--- a/css/juicebox.scss
+++ b/css/juicebox.scss
@@ -361,7 +361,8 @@ $default-font-family: 'Open Sans', sans-serif;
 
         z-index: 2048;
 
-        background-color: rgba(255, 255, 255, 0);
+        //background-color: rgba(255, 255, 255, 0);
+        background-color: greenyellow;
       }
     }
   }
@@ -452,7 +453,9 @@ $default-font-family: 'Open Sans', sans-serif;
 
           z-index: 2048;
 
-          background-color: rgba(255, 255, 255, 0);
+          //background-color: rgba(255, 255, 255, 0);
+          background-color: #58c0fb;
+
         }
       }
 
